[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { git = "https://github.com/imgui-rs/imgui-rs", tag = "v0.9.0" }
imgui-glow-renderer = { git = "https://github.com/imgui-rs/imgui-rs", tag = "v0.9.0" }
imgui-sdl2-support = { git = "https://github.com/imgui-rs/imgui-rs", tag = "v0.9.0" }
sdl2 = "0.34.5"

[[bin]]
name = "tomato"
path = "src/main.rs"
