[package]
name = "conf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.151", features = ["derive"] }
toml = { version = "0.5.10", default-features = false, features = ["preserve_order"] }
